--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=user-api
+spring.datasource.url=jdbc:mysql://localhost/user-api?createDatabaseIfNotExist=true&serverTimeZone=UTC
+spring.datasource.username=root
+spring.datasource.password=19994minhadata
+
+spring.jpa.show-sql=true
